--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML> 
+﻿<!DOCTYPE HTML> 
 <html>
     
     
@@ -748,7 +748,7 @@ function iosAlert() {
 
  
 
-iosAlert('Welcome To RashidFarhad Store This Store Maked in 2020/7/10 All Risived And Maked For RashidFarhad Thanks To Be Continued Tab Done❤️!')
+iosAlert('Welcome To RashidFarhad Store This Store Maked in 2020/7/10 All Right And Reserverd And Maked For RashidFarhad Thanks To Be Continued Tab Done❤️!')
    
   </script>
 
