--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML> 
+<!DOCTYPE HTML> 
 <html>
     
     
@@ -244,15 +244,14 @@ style="
 <div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
 <div class="item-media" style="margin-top: -4px;">
     <!-- !!  -->
-<img src="./img/appstore+.png" 
+<img src="./img/appstore.png" 
 class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-radius: 12px;">
 </div>
 <div class="item-inner" style="    margin-top: 3px;">
 <div class="item-title">
     <!-- !!  -->
 <div class="item-title" style="color: #fff;"
->App Cracker++</div>
- 
+>AppStore - اب ستور </div>
 
 <!-- !!  -->
 <!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
@@ -264,36 +263,6 @@ class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-ra
 <a class="installbutton button button-fill button-round"
 href="page/appplus.html" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
 ><</a>
-
-
-<!-- E!  -->
-
-<!-- S!  -->
-<li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
-<div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
-<div class="item-media" style="margin-top: -4px;">
-    <!-- !!  -->
-<img src="./img/appstore.png" 
-class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-radius: 12px;">
-</div>
-<div class="item-inner" style="    margin-top: 3px;">
-<div class="item-title">
-    <!-- !!  -->
-<div class="item-title" style="color: #fff;"
->AppStore💷</div>
- 
-
-<!-- !!  -->
-<!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
->v4.0</span>
-<!--<span class="spandark2" style="border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;margin-left: 4px;color: #ffffffde;background: #ddafff7d;">34.5 MB</span>-->
-</div>
-<div class="item-after" dir="rtl" style="margin-top: -16px;">
-    <!-- !!  -->
-<a class="installbutton button button-fill button-round"
-href="page/appstore.html" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
-><</a>
-</i>
 
 <!-- E!  --> <!-- S!  -->
 <li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
@@ -307,7 +276,7 @@ class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-ra
 <div class="item-title">
     <!-- !!  -->
 <div class="item-title" style="color: #fff;"
->Android🔋</div>
+>Android - اندروید ღ</div>
  
 
 <!-- !!  -->
@@ -336,7 +305,7 @@ class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-ra
 <div class="item-title">
     <!-- !!  -->
 <div class="item-title" style="color: #fff;"
->JailBreak🪓</div>
+>JailBreak - جیلبریک ♛</div>
  
 
 <!-- !!  -->
@@ -365,7 +334,7 @@ class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-ra
 <div class="item-title">
     <!-- !!  -->
 <div class="item-title" style="color: #fff;"
->GameHack++🎮</div>
+>GameHack - العاب ھاکات ❖ </div>
  
 
 <!-- !!  -->
