--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ li {
 <div class="views tabs toolbar-through mainvi"> 
 <div id="view-3" class="view view-main tab ios-edges page active" data-page="form">
 <div class="navbar blur" style="height: 66px;box-shadow: none;margin-top: -2px;background-color: #1d1d27;">
-<h1 class="title" style="font-size: 22px;color: #f9f9f9;text-align: center;    margin-top: 22px;font-weight: 300;">RashidFarhad | v1.0</h1>
+<h1 class="title" style="font-size: 22px;color: #f9f9f9;text-align: center;    margin-top: 22px;font-weight: 300;">RashidFarhad | v1.4</h1>
 <div class="navbar-inner">
 <div style="margin-top: 3px;" class="right">
 <a href="javascript:window.location.reload(true)" class="right open-vertical"><svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="redo-alt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-redo-alt fa-w-16" style="
@@ -290,32 +290,7 @@ href="page/appandroid.html" style="color: #ffffff;background: #ffffff26;box-shad
 ><</a>
 </i>
 
-<!-- E!  --> <!-- S!  -->
-<li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
-<div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
-<div class="item-media" style="margin-top: -4px;">
-    <!-- !!  -->
-<img src="https://cdn3.iconfinder.com/data/icons/social-media-2034/500/ios-512.png" 
-class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-radius: 12px;">
-</div>
-<div class="item-inner" style="    margin-top: 3px;">
-<div class="item-title">
-    <!-- !!  -->
-<div class="item-title" style="color: #fff;"
->AppleID - ابل ایدی 🌙</div>
-
-
-<!-- !!  -->
-<!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
->v4.0</span>
-<!--<span class="spandark2" style="border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;margin-left: 4px;color: #ffffffde;background: #ddafff7d;">34.5 MB</span>-->
-</div>
-<div class="item-after" dir="rtl" style="margin-top: -16px;">
-    <!-- !!  -->
-<a class="installbutton button button-fill button-round"
-href="page/AppleID.html" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
-><</a>
-</i>
+<!-- E!  -->
 
 <!-- S!  -->
 <li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
@@ -412,8 +387,8 @@ class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-ra
 <div class="item-title">
     <!-- !!  -->
 <div class="item-title" style="color: #fff;"
->Social 🌻</div>
-<label style="color:red;">Follow Me On Social Media📱</label>
+>Devoloper </> 💎</div>
+<label style="color:gold;">Maker And Desinger 🔥</label>
 
 <!-- !!  -->
 <!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
@@ -427,92 +402,7 @@ href="page/account.html" style="color: #ffffff;background: #ffffff26;box-shadow:
 ><</a>
 </i>
 
-<!-- E!  -->
 
-
-<!-- S!  -->
-<li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
-<div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
-<div class="item-media" style="margin-top: -4px;">
-    <!-- !!  -->
-<img src="https://web.telegram.org/img/logo_share.png" width="60px" height="60px" style="border-radius: 12px;">
-</div>
-<div class="item-inner" style="    margin-top: 3px;">
-<div class="item-title">
-    <!-- !!  -->
-<div class="item-title" style="color: #fff;"
->TeleGram🐚</div>
-<label style="color:blue;">MyTeleGram🌻</label>
-<!-- !!  -->
-<!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
->v4.0</span>
-<!--<span class="spandark2" style="border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;margin-left: 4px;color: #ffffffde;background: #ddafff7d;">34.5 MB</span>-->
-</div>
-<div class="item-after" dir="rtl" style="margin-top: -16px;">
-    <!-- !!  -->
-<a class="installbutton button button-fill button-round-external external item-link"
-href="https://t.me/RashidFarhad" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
-><</a>
-</i>
-
-<!-- E!  -->
-
-<!-- S!  -->
-<li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
-<div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
-<div class="item-media" style="margin-top: -4px;">
-    <!-- !!  -->
-<img src="./img/daliteam.png" width="60px" height="60px" style="border-radius: 12px;">
-</div>
-<div class="item-inner" style="    margin-top: 3px;">
-<div class="item-title">
-    <!-- !!  -->
-<div class="item-title" style="color: #fff;"
->Telegram Chanell⚙️</div>
-<label style="color:gold;">Join Telegram Chanell🌱</label>
- 
-
-<!-- !!  -->
-<!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
->v4.0</span>
-<!--<span class="spandark2" style="border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;margin-left: 4px;color: #ffffffde;background: #ddafff7d;">34.5 MB</span>-->
-</div>
-<div class="item-after" dir="rtl" style="margin-top: -16px;">
-    <!-- !!  -->
-<a class="installbutton button button-fill button-round-external external item-link"
-href="https://t.me/DaliTeamIOS" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
-><</a>
-</i>
-
-<!-- E!  -->
-
-
-<!-- S!  -->
-<li style="height: auto;border-radius: 15px;margin-bottom: 15px;background: #1d1d27;" class="li-dark">
-<div class="item-content lazy lazy-fadeIn lazy-loaded" style="height: auto;">
-<div class="item-media" style="margin-top: -4px;">
-    <!-- !!  -->
-<img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-512.png" 
-class="lazy lazy-fadeIn lazy-loaded" width="60px" height="60px" style="border-radius: 12px;">
-</div>
-<div class="item-inner" style="    margin-top: 3px;">
-<div class="item-title">
-    <!-- !!  -->
-<div class="item-title" style="color: #fff;"
->GitHub🔰</div>
-<label style="color:green;">Follow My GitHub🤍</label>
-
-<!-- !!  -->
-<!--<span class="spandark" style="color: #ffffffcf;border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;background: #8ed9ff57;"
->v4.0</span>
-<!--<span class="spandark2" style="border-radius: 20px;font-size: 12px;padding: 1px 7px 1px 7px;margin-left: 4px;color: #ffffffde;background: #ddafff7d;">34.5 MB</span>-->
-</div>
-<div class="item-after" dir="rtl" style="margin-top: -16px;">
-    <!-- !!  -->
-<a class="col button button-fill button-round external install"
-href="https://github.com/RashidFarhad" style="color: #ffffff;background: #ffffff26;box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.05);"
-><</a>
-</i>
 
 <!-- E!  -->
 
@@ -741,7 +631,7 @@ function iosAlert() {
 
  
 
-iosAlert('Welcome To RashidFarhad Store This Store Maked in 2020/7/10 All Right And Reserverd And Maked For RashidFarhad Thanks To Be Continued Tab Done❤️!')
+iosAlert('Welcome To RashidFarhad Store This Store Maked in 2020/7/10 All Right And Reserverd And Maked For RashidFarhad And Special Thanks For CodeBoy 🍁💙 Thanks To Be Continued Tab Done❤️!')
    
   </script>
 
